test/parser/parameter_list.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:6: error: expected parameter declaration
fn f(: void {}

// CHECK: [[# @LINE + 1 ]]:7: error: expected ':'
fn f(x): void {}

// CHECK: [[# @LINE + 1 ]]:8: error: expected type specifier
fn f(x:): void {}

// CHECK: [[# @LINE + 1 ]]:9: error: expected type specifier
fn f(x: 1.0): void {}

// CHECK: [[# @LINE + 1 ]]:15: error: expected ')'
fn f(x: number: void {}

// CHECK: [[# @LINE + 1 ]]:17: error: expected parameter declaration
fn f(x: number, 2): void {}

// CHECK: [[# @LINE + 1 ]]:6: error: expected parameter declaration
fn f(,): void {}

fn trailingComma(x:number,): void {}
// CHECK: FunctionDecl: trailingComma
// CHECK-NEXT:   BuiltinType: void
// CHECK-NEXT:   ParamDecl: x
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   Block

fn trailingComma2(
    x:number, 
    y:number,
): void {}
// CHECK: FunctionDecl: trailingComma2
// CHECK-NEXT:   BuiltinType: void
// CHECK-NEXT:   ParamDecl: x
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   ParamDecl: y
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   Block

fn f(x: number, y: number): void {}
// CHECK: FunctionDecl: f
// CHECK-NEXT:   BuiltinType: void
// CHECK-NEXT:   ParamDecl: x
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   ParamDecl: y
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   Block

fn main(): void {}
